issue-19: fix layout bugs

--- a/vite-project/src/App.scss
+++ b/vite-project/src/App.scss
@@ -18,3 +18,14 @@ body {
   // border: 1px solid black;
 }
 
+.categories__button {
+  border-radius: 6px;
+  border: 1px solid #ddd;
+  background-color: transparent;
+  color: #8b8b8b;
+  cursor: pointer;
+  padding: 8px 16px;
+  font-size: 16px;
+  line-height: 126%;
+  text-align: center;
+}
