--- a/vite-project/src/components/Category/CategoryList.scss
+++ b/vite-project/src/components/Category/CategoryList.scss
@@ -1,62 +1,37 @@
 .categories {
-    &__navigation {
-        max-width: 254px;
-        display: flex;
-        align-items: center;
-        margin: 40px 0;
-    
-        & span {
-            color: lightgrey;
-        }
-        & button {
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            padding: 8px 16px;
-            max-width: 118px;       
-        }
-        & button:first-of-type {
-            color: #8b8b8b; /* Цвет текста для левой кнопки */
-          }
-          & button:last-of-type {
-            color: #424436; /* Цвет текста для правой кнопки */
-          }       
+  &__navigation {
+    margin: 40px 0;
+
+    & span {
+      color: lightgrey;
     }
 
-    &__ListContainer {
-        display: flex;
-        justify-content: space-between;
-        gap: 30px;
-        margin-bottom: 80px;
+    & button:last-of-type {
+      color: #424436; /* Цвет текста для правой кнопки */
+    }
+  }
 
-        & p {   
-            font-size: 20px;
-            line-height: 130%;
-            text-align: center;
-            }
+  &__ListContainer {
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    margin-bottom: 80px;
+
+    & p {
+      font-size: 20px;
+      line-height: 130%;
+      text-align: center;
     }
-    
-    &__Container {
-        flex: 1;
-        text-align: center;
-        max-width: 248px;
-    }
-    
-    &__Img {
-        width: 100%;
-        height: auto;
-    }
+  }
+
+  &__Container {
+    flex: 1;
+    text-align: center;
+    max-width: 248px;
+  }
+
+  &__Img {
+    max-width: 100%;
+    margin-bottom: 16px;
+  }
 }
-
-// &__button__L {
-//     color: #8b8b8b;
-// }
-
-// &__button__R {
-//     color: #424436;
-// }    
-
-
-
-
-
-
