--- a/vite-project/src/components/HomePage/SectionCategories/SectionCategories.scss
+++ b/vite-project/src/components/HomePage/SectionCategories/SectionCategories.scss
@@ -20,12 +20,6 @@
     }
   }
 
-  &__button {
-    padding: 5px 10px;
-    font-size: 14px;
-    border: 2px solid lightgray;
-    border-radius: 8px;
-  }
   &__button a {
     text-decoration: none;
     color: gray;
